# Ampere

./: .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  SPEC.md  pyproject.toml
.claude/skills/gsmarena-device-data/: SKILL.md
ampere/: __init__.py  config.py
ampere/adapters/: __init__.py
ampere/adapters/notify/: __init__.py  (+2 more)
ampere/application/: __init__.py  catalog_seed.py  demo_seed.py  notify.py  notify_config.py  refresh_catalog.py  report.py  run_daily.py  snapshot.py  views.py
ampere/domain/: __init__.py  catalog.py  dedup.py  diff.py  frontier.py  lexicon.py  longevity.py  models.py  pricing.py  resolve.py  scoring.py  trust.py
ampere/ports/: __init__.py  catalog_source.py  notifier.py  repositories.py  search_source.py
ampere/web/: __init__.py  api.py
data/seed/: chipsets_seed.csv  devices_seed.csv
deploy/: README.md
deploy/cron/: ampere.crontab
deploy/launchd/: id.co.tuntun.ampere.run-daily.plist
design/: Ampere.dc.html  NOTES.md  README.md  SPEC.md
skills/: gsmarena-device-data.skill  id-android-market.skill  shopee-marketplace.skill
tests/: test_affiliate_feed.py  test_catalog_seed.py  test_dedup.py  test_deploy_assets.py  test_diff.py  test_frontier.py  test_gsmarena_battery.py  test_gsmarena_perf.py  test_internal_endpoint.py  test_longevity.py  test_notify.py  test_notify_config.py  test_pricing.py  test_refresh_catalog.py  test_report.py  test_repos.py  test_resolve.py  test_run_daily.py  test_scheduler.py  test_scoring.py  test_smoke.py  test_snapshot.py  test_source_contract.py  test_trust.py  test_views.py  test_web.py
(+22 files in other folders)
